# sweidmt

./: ApplicationData.cpp  ApplicationData.h  Becken_3.rom  CMakeLists.txt  CT_Schicht_Bauch_12bit.raw  CT_Schicht_Lunge_Herz_12bit.raw  ComParamsPolaris.ini  MyApp-1.0.0.bat  Polaris.ini  Polaris_Becken_klein.ini  QFrameworkApplication.cpp  QFrameworkApplication.h  RB_Becken.rom  RB_Becken_2.rom  RB_Kugelantaster.rom  RB_Pointer_2.rom  RB_Pointer_3.rom  TestWidget1.cpp  TestWidget1.h  TestWidget1.ui  TestWidget3.cpp  TestWidget3.h  TestWidget3.ui  create_msvc15_project.bat  dll.cpp  dll.hpp
LocalizerDLL/0.1.0/: configure.cmake  install.bat
LocalizerDLL/0.1.0/include/localizerDll/: Localizer.h
misc/: run.bat.in
